Feature handleMatchFailuresAsNew [MRA-841] (#367) (#368)
* Add matchFailuresAsNew query parameter
* NOTE: requires validator ^3.8.0 to be usable

* Update deps

* 3.5.0-alpha.1
