# src/api.yaml
@@ -231,6 +231,12 @@ paths:
           schema:
             type: boolean
             default: false
+        - name: matchFailuresAsNew
+          description: >-
+            Handle merge jobs where are all matches fail matchValidation as new
+          in: query
+          schema:
+            type: boolean
         - name: cataloger
           description: >-
             Cataloger name to use while operating on a record. Note: requires admin rights to use
@@ -404,6 +410,12 @@ paths:
           schema:
             type: boolean
             default: false
+        - name: matchFailuresAsNew
+          description: >-
+            Handle merge jobs where are all matches fail matchValidation as new
+          in: query
+          schema:
+            type: boolean
         - name: pRejectFile
           description: Error log file location
           in: query
