# src/routes/prio.js
@@ -116,6 +116,7 @@ export default async ({sruUrl, amqpUrl, mongoUri, pollWaitTime, recordType, requ
         failOnError: null,
         // Prio forces updates as default, even if the update would not make changes to the database record
         skipNoChangeUpdates: req.query.skipNoChangeUpdates === undefined ? false : parseBoolean(req.query.skipNoChangeUpdates),
+        matchFailuresAsNew: req.query.matchFailuresAsNew === undefined ? undefined : parseBoolean(req.query.matchFailuresAsNew),
         prio: true
       };
 
